RESOLVED FIXED Bug 73623
[Chromium] Fix compilation warnings for ASSERT()
https://bugs.webkit.org/show_bug.cgi?id=73623
Summary [Chromium] Fix compilation warnings for ASSERT()
Kent Tamura
Reported 2011-12-01 22:18:30 PST
/Volumes/d2/WebKit/Source/WebKit/chromium/../../../Tools/DumpRenderTree/chromium/ImageDiff.cpp:155:9: warning: conversion specifies type 'char *' but the argument has type 'int' [-Wformat] /Volumes/d2/WebKit/Source/WebKit/chromium/../../../Tools/DumpRenderTree/chromium/ImageDiff.cpp:55:47: note: expanded from macro 'ASSERT'
Attachments
Patch (1.47 KB, patch)
2011-12-01 22:20 PST, Kent Tamura
no flags
Kent Tamura
Comment 1 2011-12-01 22:20:35 PST
Tony Chang
Comment 2 2011-12-02 10:24:41 PST
Comment on attachment 117566 [details] Patch Thanks!
WebKit Review Bot
Comment 3 2011-12-02 14:42:40 PST
Comment on attachment 117566 [details] Patch Clearing flags on attachment: 117566 Committed r101857: <http://trac.webkit.org/changeset/101857>
WebKit Review Bot
Comment 4 2011-12-02 14:42:44 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.