[Chromium] Fix compilation warnings for ASSERT() https://bugs.webkit.org/show_bug.cgi?id=73623

Reviewed by Tony Chang.

* DumpRenderTree/chromium/ImageDiff.cpp:
 - Fix fprintf format: %s -> %d for __LINE__
 - Do nothing for ASSERT() if NDEBUG.


Canonical link: https://commits.webkit.org/90328@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101857 268f45cc-cd09-0410-ab3c-d52691b4dbfc